Fixed the whitespace on right side of the screen on mobile

--- a/src/About/style/about.css
+++ b/src/About/style/about.css
@@ -63,12 +63,17 @@ p.resumep:hover{
 }
 
 .contactbox{
-    border: var(--borderguide);
     width: clamp(350px, 55vw, 600px);
     padding: max(1rem, .25vw) 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+
+h2.contactme{
+    font-weight: 800;
+    margin: 1rem 2rem;
+    border: var(--borderguide);
 }
 
 .contactoptions{
