--- a/src/Homepage/style/homepage.css
+++ b/src/Homepage/style/homepage.css
@@ -1,6 +1,5 @@
 /* *{
     --borderguide: 1px solid white;
-    --borderguide: none;
 } */
 
 .header{
@@ -13,13 +12,6 @@
     border: var(--borderguide);
     bottom: 3rem;
     z-index: 10;
-}
-
-.theme{
-    width: 2.5rem;
-    filter: var(--theme);
-    user-select: none;
-    -webkit-user-drag: none;
 }
 
 .navigation{
@@ -67,12 +59,12 @@ p.navigate:hover{
 }
 
 h1.hello{
-    font-size: max(32px, 2.5vw);
+    font-size: max(31px, 2.5vw);
 }
 
 h1.name{
     font-weight: 800;
-    font-size: max(31px, 2.5vw);
+    font-size: max(30px, 2.5vw);
     user-select: none;
     animation: colorchange 10s linear infinite;
 }
