--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,12 @@ red         #EC5B64
   background-color: var(--blackcol);
 }
 
+.cold, .warm{
+  overflow-x: clip;
+  position: relative;
+  background-color: var(--blackcol);
+}
+
 .cold{
   --blackcol: #121446;
   --lightcol: #19B8E1;
@@ -41,8 +47,6 @@ red         #EC5B64
   --border3: url('./Homepage/assets/coldborder3.svg');
   --theme : invert(92%) sepia(1%) saturate(1618%) hue-rotate(141deg) brightness(110%) contrast(103%);
   --themenew :  invert(64%) sepia(82%) saturate(1394%) hue-rotate(152deg) brightness(90%) contrast(96%);
-  position: relative;
-  background-color: var(--blackcol);
 }
 
 .warm{
@@ -60,8 +64,6 @@ red         #EC5B64
   --border3: url('./Homepage/assets/warmborder3.svg');
   --theme : invert(92%) sepia(1%) saturate(1618%) hue-rotate(141deg) brightness(110%) contrast(103%);
   --themenew :  invert(55%) sepia(13%) saturate(2480%) hue-rotate(314deg) brightness(107%) contrast(97%);
-  position: relative;
-  background-color: var(--blackcol);
 }
 
 body{
@@ -88,4 +90,11 @@ body{
 
 .themecon:hover{
   background-color: var(--mediumcol);
+}
+
+.theme{
+  width: 2.5rem;
+  filter: var(--theme);
+  user-select: none;
+  -webkit-user-drag: none;
 }
